--- a/index.html
+++ b/index.html
@@ -76,11 +76,10 @@
     <section>
       <div class="hero pt-5">
         <div class="hero-text pt-5">
-          <h1 class="text-center tarseelat-heading pt-5">TERSEELAT</h1>
+          <h1 class="text-center tarseelat-heading pt-5">JUBL ALQALM</h1>
           <br />
           <h1 class="text-center fw-bold px-2">
-            FOR SOLAR ENERGY SYSTEMS <br />
-            RENTAL CO.
+            PROJECT MANAGEMENT SERVICES EST.
           </h1>
         </div>
       </div>
@@ -339,10 +338,10 @@
                 <h6 class="fw-bold text-uppercase">PHONE NUMBER</h6>
                 <p class="text-muted">
                   <a
-                    href="telto:+971 52 611 3621"
+                    href="telto:0545299909"
                     class="text-decoration-none text-muted"
                   >
-                    +971 52 611 3621
+                  0545299909
                   </a>
                 </p>
               </div>
@@ -359,10 +358,10 @@
                 <h6 class="fw-bold text-uppercase">E-MAIL</h6>
                 <p class="text-muted">
                   <a
-                    href="mailto:fidahussain@terseelat.com"
+                    href="mailto:srkuae4@gmail.com"
                     class="text-decoration-none text-muted"
                   >
-                    fidahussain@terseelat.com
+                    srkuae4@gmail.com
                   </a>
                 </p>
               </div>
