--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
                 <h6 class="fw-bold text-uppercase">PHONE NUMBER</h6>
                 <p class="text-muted">
                   <a
-                    href="telto:0545299909"
+                    href="tel:0545299909"
                     class="text-decoration-none text-muted"
                   >
                   0545299909
