--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <section>
       <div class="hero pt-5">
         <div class="hero-text pt-5">
-          <h1 class="text-center tarseelat-heading text-primary pt-5">JUBL ALQALM</h1>
+          <h1 class="text-center tarseelat-heading pt-5">JUBL ALQALM</h1>
           <br />
           <h1 class="text-center fw-bold px-2 text-primary">
             PROJECT MANAGEMENT SERVICES EST.
@@ -322,7 +322,8 @@
               <div>
                 <h6 class="fw-bold">ADDRESS</h6>
                 <p class="text-muted">
-                  Almuteena technic bldg.deora Dubai office3
+                  Office No. 304, Al Muteena Technic Building Dubai.
+                  P.O Box 57722
                 </p>
               </div>
             </div>
