--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
                 />
               </div>
               <div>
-                <h6 class="fw-bold text-uppercase">E-MAIL</h6>
+                <h6 class="fw-bold text-uppercase">HR Manager E-MAIL</h6>
                 <p class="text-muted">
                   <a
                     href="mailto:srkuae4@gmail.com"
