--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       crossorigin="anonymous"
     />
 
-    <title>Tarseelat</title>
+    <title>JUBL ALQALM</title>
 
     <!-- Custom CSS Link -->
 
