--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <section>
       <div class="hero pt-5">
         <div class="hero-text pt-5">
-          <h1 class="text-center tarseelat-heading pt-5">JUBL ALQALM</h1>
+          <h1 class="text-center tarseelat-heading pt-5"></h1>
           <br />
           <h1 class="text-center fw-bold px-2 text-primary">
             PROJECT MANAGEMENT SERVICES EST.
