--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <div class="row">
           <div class="col-12 col-md-6 my-5 order-1 order-md-0">
             <img
-              src="/assets/images/about.jpg"
+              src="/assets/images/visa.jpeg"
               class="img-fluid border-img"
               alt=""
             />
@@ -145,7 +145,7 @@
           </div>
           <div class="col-12 col-md-6 my-5">
             <img
-              src="/assets/images/about.jpg"
+              src="/assets/images/visa-2.webp"
               class="img-fluid border-img"
               alt=""
             />
