--- a/index.html
+++ b/index.html
@@ -350,6 +350,26 @@
             <div class="d-flex gap-3 mt-3">
               <div>
                 <img
+                  src="/assets/images/office-building.png"
+                  class="img-fluid icons"
+                  alt=""
+                />
+              </div>
+              <div>
+                <h6 class="fw-bold text-uppercase">LANDLINE NUMBER</h6>
+                <p class="text-muted">
+                  <a
+                    href="tel:+971 4 283  4220"
+                    class="text-decoration-none text-muted"
+                  >
+                  +971 4 283  4220
+                  </a>
+                </p>
+              </div>
+            </div>
+            <div class="d-flex gap-3 mt-3">
+              <div>
+                <img
                   src="/assets/images/mail.png"
                   class="img-fluid icons"
                   alt=""
