--- a/index.html
+++ b/index.html
@@ -397,12 +397,12 @@
               </div>
               <div>
                 <h6 class="fw-bold text-uppercase">HOURS</h6>
-                <p class="text-muted">9am to 4pm</p>
+                <p class="text-muted pb-md-5 pb-0">9am to 4pm</p>
               </div>
             </div>
           </div>
           <div class="col-12 col-md-8">
-            <form>
+            <form class="mt-md-0 mt-5">
               <div class="row">
                 <div class="col-12 col-md-6">
                   <div>
