--- a/index.html
+++ b/index.html
@@ -379,10 +379,10 @@
                 <h6 class="fw-bold text-uppercase">HR Manager E-MAIL</h6>
                 <p class="text-muted">
                   <a
-                    href="mailto:srkuae4@gmail.com"
+                    href="mailto:hrjubalalqaimproject0@gmail.com"
                     class="text-decoration-none text-muted"
                   >
-                    srkuae4@gmail.com
+                    hrjubalalqaimproject0@gmail.com
                   </a>
                 </p>
               </div>
