--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="hero-text pt-5">
           <h1 class="text-center tarseelat-heading pt-5"></h1>
           <br />
-          <h1 class="text-center fw-bold px-2 text-primary">
+          <h1 class="text-center fw-bold px-2 text-white">
             PROJECT MANAGEMENT SERVICES EST.
           </h1>
         </div>
