--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <!-- Custom CSS Link -->
 
     <link rel="stylesheet" href="/assets/css/style.css" />
+
+    <link rel="shortcut icon" href="/assets/images/JA-modified.png" type="image/x-icon">
   </head>
   <body>
     <!-- Navbar Section Started -->
@@ -27,7 +29,7 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top px-5 shadow-sm">
           <div class="container-fluid">
             <a class="navbar-brand" href="#">
-              <img src="/assets/images/logo.png" class="img-fluid" alt="" />
+              <img src="/assets/images/logo.png" class="img-fluid logo" alt="" />
             </a>
             <button
               class="navbar-toggler"
