--- a/index.html
+++ b/index.html
@@ -104,8 +104,7 @@
           <div class="col-12 col-md-6 my-5">
             <h1 class="fw-bold ps-3">About Us</h1>
             <p class="lh-lg ps-3 text-muted">
-              We are here to design install and maintain efficient. Cost
-              effective renewable energy systems.
+              Unlocking Boundless Horizons, Your Trusted Partner for Visa Solutions.
             </p>
 
             <div class="ps-3">
@@ -129,12 +128,11 @@
         <div class="row">
           <div class="col-12 col-md-6 my-5">
             <h1 class="fw-bold ps-3">Our Vision & Mission</h1>
-            <p class="lh-lg ps-3 text-muted">
-              <b>Vision:</b> To build best renewable energy company in the uae
+            <p class="lh-lg px-3 text-muted">
+              <b>Vision:</b> To become the premier visa services provider in the UAE.
             </p>
-            <p class="lh-lg ps-3 text-muted">
-              <b>Mission: </b>Lead the energy transition by providing innovative
-              solution to our customer.
+            <p class="lh-lg px-3 text-muted">
+              <b>Mission: </b>To guide individuals and organizations through seamless visa processes, ensuring their success on their UAE journey.
             </p>
 
             <div class="ps-3">
@@ -239,9 +237,8 @@
 
     <section>
       <div class="container my-5 px-5">
-        <h2 class="text-center fw-bold lh-sm">
-          ENERGY SOLUTIONS FOR LOCAL AND <br />
-          INTERNATIONAL BUSINESSES
+        <h2 class="text-center text-uppercase fw-bold lh-base">
+          Visa's Solutions for Local and <br> International Enterprises
         </h2>
 
         <div class="row my-5 gy-5">
@@ -325,7 +322,7 @@
                 <h6 class="fw-bold">ADDRESS</h6>
                 <p class="text-muted">
                   Office No. 304, Al Muteena Technic Building Dubai.
-                  P.O Box 57722
+                  P.O Box 57722.
                 </p>
               </div>
             </div>
