--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
           <div class="container-fluid">
             <a class="navbar-brand" href="#">
               <img src="/assets/images/logo.png" class="img-fluid logo" alt="" />
+              <img src="/assets/images/JA-modified.png" class="img-fluid mbl-logo" alt="">
             </a>
             <button
               class="navbar-toggler"
