--- a/index.html
+++ b/index.html
@@ -315,11 +315,11 @@
               <div>
                 <img
                   src="/assets/images/location.png"
-                  class="img-fluid icons"
+                  class="img-fluid address-icons"
                   alt=""
                 />
               </div>
-              <div>
+              <div class="px-3">
                 <h6 class="fw-bold">ADDRESS</h6>
                 <p class="text-muted">
                   Office No. 304, Al Muteena Technic Building Dubai.
