--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
                     href="mailto:hrjubalalqaimproject0@gmail.com"
                     class="text-decoration-none text-muted"
                   >
-                    hrjubalalqaimproject0@gmail.com
+                    hrjubalalct0@gmail.com
                   </a>
                 </p>
               </div>
