--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
               </div>
             </div>
           </div>
-          <div class="col-12 col-md-8">
+          <div class="col-12 col-md-8 px-5">
             <form class="mt-md-0 mt-5">
               <div class="row">
                 <div class="col-12 col-md-6">
