--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
         <div class="row my-5 gy-5">
           <div class="col-12 col-md-4">
             <div class="blog">
-              <img src="/assets/images/blog-3.jpg" class="img-fluid" alt="" />
+              <img src="/assets/images/BlogPost-1.webp" class="img-fluid" alt="" />
               <h5 class="text-center fw-bold py-3 lh-base text-muted">
                 On-grid Distributed Solar <br />
                 Business
@@ -263,7 +263,7 @@
           </div>
           <div class="col-12 col-md-4">
             <div class="blog">
-              <img src="/assets/images/blog-2.jpg" class="img-fluid" alt="" />
+              <img src="/assets/images/BlogPost-2.webp" class="img-fluid" alt="" />
               <h5 class="text-center fw-bold py-3 text-muted lh-base">
                 Off-grid Hybrid <br />
                 Power Business
@@ -281,7 +281,7 @@
           </div>
           <div class="col-12 col-md-4">
             <div class="blog">
-              <img src="/assets/images/blog-3.jpg" class="img-fluid" alt="" />
+              <img src="/assets/images/BlogPost-3.webp" class="img-fluid" alt="" />
               <h5 class="text-center fw-bold py-3 lh-base text-muted">
                 Operation and Maintenance of <br />
                 Solar Power Plant
