--- a/index.html
+++ b/index.html
@@ -19,7 +19,14 @@
 
     <link rel="stylesheet" href="/assets/css/style.css" />
 
+    <!-- Favicon Link -->
+
     <link rel="shortcut icon" href="/assets/images/JA-modified.png" type="image/x-icon">
+
+    <!-- AOS Animation -->
+
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
   </head>
   <body>
     <!-- Navbar Section Started -->
@@ -79,9 +86,9 @@
     <section>
       <div class="hero pt-5">
         <div class="hero-text pt-5">
-          <h1 class="text-center tarseelat-heading pt-5"></h1>
+          <h1 class="text-center tarseelat-heading pt-5" data-aos="zoom-in-up"></h1>
           <br />
-          <h1 class="text-center fw-bold px-2 text-white">
+          <h1 class="text-center fw-bold px-2 text-white" data-aos="fade-up">
             PROJECT MANAGEMENT SERVICES EST.
           </h1>
         </div>
@@ -95,14 +102,14 @@
     <section class="my-5">
       <div class="container px-5">
         <div class="row">
-          <div class="col-12 col-md-6 my-5 order-1 order-md-0">
+          <div class="col-12 col-md-6 my-5 order-1 order-md-0" data-aos="flip-left">
             <img
               src="/assets/images/visa.jpeg"
               class="img-fluid border-img"
               alt=""
             />
           </div>
-          <div class="col-12 col-md-6 my-5">
+          <div class="col-12 col-md-6 my-5" data-aos="fade-up">
             <h1 class="fw-bold ps-3">About Us</h1>
             <p class="lh-lg ps-3 text-muted">
               Unlocking Boundless Horizons, Your Trusted Partner for Visa Solutions.
@@ -127,7 +134,7 @@
     <section class="my-5">
       <div class="container px-5">
         <div class="row">
-          <div class="col-12 col-md-6 my-5">
+          <div class="col-12 col-md-6 my-5" data-aos="fade-up">
             <h1 class="fw-bold ps-3">Our Vision & Mission</h1>
             <p class="lh-lg px-3 text-muted">
               <b>Vision:</b> To become the premier visa services provider in the UAE.
@@ -144,7 +151,7 @@
               </button>
             </div>
           </div>
-          <div class="col-12 col-md-6 my-5">
+          <div class="col-12 col-md-6 my-5" data-aos="flip-right">
             <img
               src="/assets/images/visa-2.webp"
               class="img-fluid border-img"
@@ -161,9 +168,10 @@
 <div id="services"></div>
     <section class="services py-5">
       <div class="container px-5 py-5">
-        <h1 class="fw-bold text-center pb-4">Our Services</h1>
+        <h1 class="fw-bold text-center pb-4" data-aos="zoom-in">Our Services</h1>
 
-        <div class="row my-3 gy-5">
+        <div class="row my-3 gy-5" data-aos="fade-up"
+        data-aos-duration="1000">
           <div class="col-12 col-md-4">
             <div class="services-1 rounded-1 text-center shadow px-4 py-5">
               <img
@@ -174,7 +182,8 @@
               <h4 class="fw-bold pt-4 text-muted">Software Solutions Services</h4>
             </div>
           </div>
-          <div class="col-12 col-md-4">
+          <div class="col-12 col-md-4" data-aos="fade-up"
+          data-aos-duration="2000">
             <div class="services-2 rounded-1 text-center shadow px-4 py-5">
               <img
                 src="/assets/images/Data-center-Professional-Data-management.png"
@@ -186,7 +195,8 @@
               </h4>
             </div>
           </div>
-          <div class="col-12 col-md-4">
+          <div class="col-12 col-md-4" data-aos="fade-up"
+          data-aos-duration="3000">
             <div class="services-3 rounded-1 text-center shadow px-4 py-5">
               <img
                 src="/assets/images/Website-Development-Maintenance.png"
@@ -197,7 +207,8 @@
             </div>
           </div>
         </div>
-        <div class="row my-0 gy-5">
+        <div class="row my-0 gy-5" data-aos="fade-up"
+        data-aos-duration="1000">
           <div class="col-12 col-md-4">
             <div class="services-4 rounded-1 text-center shadow px-4 py-5">
               <img
@@ -208,7 +219,8 @@
               <h4 class="fw-bold pt-4 text-muted">Data Conversions</h4>
             </div>
           </div>
-          <div class="col-12 col-md-4">
+          <div class="col-12 col-md-4" data-aos="fade-up"
+          data-aos-duration="2000">
             <div class="services-5 rounded-1 text-center shadow px-4 py-5">
               <img
                 src="/assets/images/Software-solutions-services.png"
@@ -218,7 +230,8 @@
               <h4 class="fw-bold pt-4 text-muted">Software Solutions</h4>
             </div>
           </div>
-          <div class="col-12 col-md-4">
+          <div class="col-12 col-md-4" data-aos="fade-up"
+          data-aos-duration="3000">
             <div class="services-6 rounded-1 text-center shadow px-4 py-5">
               <img
                 src="/assets/images/Payment-Solution.png"
@@ -238,12 +251,12 @@
 
     <section>
       <div class="container my-5 px-5">
-        <h2 class="text-center text-uppercase fw-bold lh-base">
+        <h2 class="text-center text-uppercase fw-bold lh-base" data-aos="zoom-in">
           Visa's Solutions for Local and <br> International Enterprises
         </h2>
 
         <div class="row my-5 gy-5">
-          <div class="col-12 col-md-4">
+          <div class="col-12 col-md-4" data-aos="zoom-in" data-aos-duration="1000">
             <div class="blog">
               <img src="/assets/images/BlogPost-1.webp" class="img-fluid" alt="" />
               <h5 class="text-center fw-bold py-3 lh-base text-muted">
@@ -261,7 +274,7 @@
               </div>
             </div>
           </div>
-          <div class="col-12 col-md-4">
+          <div class="col-12 col-md-4" data-aos="zoom-in" data-aos-duration="1000">
             <div class="blog">
               <img src="/assets/images/BlogPost-2.webp" class="img-fluid" alt="" />
               <h5 class="text-center fw-bold py-3 text-muted lh-base">
@@ -279,12 +292,12 @@
               </div>
             </div>
           </div>
-          <div class="col-12 col-md-4">
+          <div class="col-12 col-md-4" data-aos="zoom-in" data-aos-duration="1000">
             <div class="blog">
               <img src="/assets/images/BlogPost-3.webp" class="img-fluid" alt="" />
               <h5 class="text-center fw-bold py-3 lh-base text-muted">
                 Operation and Maintenance of <br />
-                Solar Power Plant
+                Your Visa
               </h5>
               <div class="text-center">
                 <a href="#">
@@ -308,9 +321,9 @@
     <section class="contact">
       <div class="container px-3">
         <div class="row">
-          <p class="text-center pt-5">Contact</p>
-          <h1 class="text-center fw-bold py-3">Get In Touch!</h1>
-          <div class="col-12 col-md-4">
+          <p class="text-center pt-5" data-aos="zoom-in">Contact</p>
+          <h1 class="text-center fw-bold py-3" data-aos="fade-up">Get In Touch!</h1>
+          <div class="col-12 col-md-4" data-aos="fade-up">
             <div class="d-flex gap-3">
               <div>
                 <img
@@ -401,7 +414,7 @@
               </div>
             </div>
           </div>
-          <div class="col-12 col-md-8 px-5">
+          <div class="col-12 col-md-8 px-5" data-aos="fade-up">
             <form class="mt-md-0 mt-5">
               <div class="row">
                 <div class="col-12 col-md-6">
@@ -465,6 +478,18 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
+
+     <!-- AOS Animation -->
+
+     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
+     <script>
+      AOS.init({
+        offset: 110,
+        duration: 1000,
+
+      });
+    </script>
 
     <!-- Option 2: Separate Popper and Bootstrap JS -->
     <!--
