--- a/index.html
+++ b/index.html
@@ -21,23 +21,41 @@
 
     <!-- Favicon Link -->
 
-    <link rel="shortcut icon" href="/assets/images/JA-modified.png" type="image/x-icon">
+    <link
+      rel="shortcut icon"
+      href="/assets/images/JA-modified.png"
+      type="image/x-icon"
+    />
 
     <!-- AOS Animation -->
 
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
 
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
   </head>
   <body>
     <!-- Navbar Section Started -->
 
     <section class="bg-white">
       <div class="container">
-        <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top px-5 shadow-sm">
+        <nav
+          class="navbar navbar-expand-lg navbar-light bg-white fixed-top px-5 shadow-sm"
+        >
           <div class="container-fluid">
             <a class="navbar-brand" href="#">
-              <img src="/assets/images/logo.png" class="img-fluid logo" alt="" />
-              <img src="/assets/images/JA-modified.png" class="img-fluid mbl-logo" alt="">
+              <img
+                src="/assets/images/logo.png"
+                class="img-fluid logo"
+                alt=""
+              />
+              <img
+                src="/assets/images/JA-modified.png"
+                class="img-fluid mbl-logo"
+                alt=""
+              />
             </a>
             <button
               class="navbar-toggler"
@@ -53,7 +71,10 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                  <a class="nav-link active text-primary" aria-current="page" href="#"
+                  <a
+                    class="nav-link active text-primary"
+                    aria-current="page"
+                    href="#"
                     >Home</a
                   >
                 </li>
@@ -63,7 +84,10 @@
                   >
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#services"
+                  <a
+                    class="nav-link active"
+                    aria-current="page"
+                    href="#services"
                     >Services</a
                   >
                 </li>
@@ -86,7 +110,10 @@
     <section>
       <div class="hero pt-5">
         <div class="hero-text pt-5">
-          <h1 class="text-center tarseelat-heading pt-5" data-aos="zoom-in-up"></h1>
+          <h1
+            class="text-center tarseelat-heading pt-5"
+            data-aos="zoom-in-up"
+          ></h1>
           <br />
           <h1 class="text-center fw-bold px-2 text-white" data-aos="fade-up">
             PROJECT MANAGEMENT SERVICES EST.
@@ -97,12 +124,19 @@
 
     <!-- Hero Section Ended -->
 
+    <button id="go-top-btn">
+      <i class="fa fa-level-up text-dark" aria-hidden="true"></i>
+    </button>
+
     <!-- About Section Started -->
     <div id="about"></div>
     <section class="my-5">
       <div class="container px-5">
         <div class="row">
-          <div class="col-12 col-md-6 my-5 order-1 order-md-0" data-aos="flip-left">
+          <div
+            class="col-12 col-md-6 my-5 order-1 order-md-0"
+            data-aos="flip-left"
+          >
             <img
               src="/assets/images/visa.jpeg"
               class="img-fluid border-img"
@@ -112,7 +146,8 @@
           <div class="col-12 col-md-6 my-5" data-aos="fade-up">
             <h1 class="fw-bold ps-3">About Us</h1>
             <p class="lh-lg ps-3 text-muted">
-              Unlocking Boundless Horizons, Your Trusted Partner for Visa Solutions.
+              Unlocking Boundless Horizons, Your Trusted Partner for Visa
+              Solutions.
             </p>
 
             <div class="ps-3">
@@ -137,10 +172,13 @@
           <div class="col-12 col-md-6 my-5" data-aos="fade-up">
             <h1 class="fw-bold ps-3">Our Vision & Mission</h1>
             <p class="lh-lg px-3 text-muted">
-              <b>Vision:</b> To become the premier visa services provider in the UAE.
+              <b>Vision:</b> To become the premier visa services provider in the
+              UAE.
             </p>
             <p class="lh-lg px-3 text-muted">
-              <b>Mission: </b>To guide individuals and organizations through seamless visa processes, ensuring their success on their UAE journey.
+              <b>Mission: </b>To guide individuals and organizations through
+              seamless visa processes, ensuring their success on their UAE
+              journey.
             </p>
 
             <div class="ps-3">
@@ -165,13 +203,14 @@
     <!-- Vision & Mission Section Ended -->
 
     <!-- Services Section Started -->
-<div id="services"></div>
+    <div id="services"></div>
     <section class="services py-5">
       <div class="container px-5 py-5">
-        <h1 class="fw-bold text-center pb-4" data-aos="zoom-in">Our Services</h1>
+        <h1 class="fw-bold text-center pb-4" data-aos="zoom-in">
+          Our Services
+        </h1>
 
-        <div class="row my-3 gy-5" data-aos="fade-up"
-        data-aos-duration="1000">
+        <div class="row my-3 gy-5" data-aos="fade-up" data-aos-duration="1000">
           <div class="col-12 col-md-4">
             <div class="services-1 rounded-1 text-center shadow px-4 py-5">
               <img
@@ -179,11 +218,16 @@
                 class="img-fluid"
                 alt=""
               />
-              <h4 class="fw-bold pt-4 text-muted">Software Solutions Services</h4>
+              <h4 class="fw-bold pt-4 text-muted">
+                Software Solutions Services
+              </h4>
             </div>
           </div>
-          <div class="col-12 col-md-4" data-aos="fade-up"
-          data-aos-duration="2000">
+          <div
+            class="col-12 col-md-4"
+            data-aos="fade-up"
+            data-aos-duration="2000"
+          >
             <div class="services-2 rounded-1 text-center shadow px-4 py-5">
               <img
                 src="/assets/images/Data-center-Professional-Data-management.png"
@@ -195,20 +239,24 @@
               </h4>
             </div>
           </div>
-          <div class="col-12 col-md-4" data-aos="fade-up"
-          data-aos-duration="3000">
+          <div
+            class="col-12 col-md-4"
+            data-aos="fade-up"
+            data-aos-duration="3000"
+          >
             <div class="services-3 rounded-1 text-center shadow px-4 py-5">
               <img
                 src="/assets/images/Website-Development-Maintenance.png"
                 class="img-fluid"
                 alt=""
               />
-              <h4 class="fw-bold pt-4 text-muted">Website Development & Maintenance</h4>
+              <h4 class="fw-bold pt-4 text-muted">
+                Website Development & Maintenance
+              </h4>
             </div>
           </div>
         </div>
-        <div class="row my-0 gy-5" data-aos="fade-up"
-        data-aos-duration="1000">
+        <div class="row my-0 gy-5" data-aos="fade-up" data-aos-duration="1000">
           <div class="col-12 col-md-4">
             <div class="services-4 rounded-1 text-center shadow px-4 py-5">
               <img
@@ -219,8 +267,11 @@
               <h4 class="fw-bold pt-4 text-muted">Data Conversions</h4>
             </div>
           </div>
-          <div class="col-12 col-md-4" data-aos="fade-up"
-          data-aos-duration="2000">
+          <div
+            class="col-12 col-md-4"
+            data-aos="fade-up"
+            data-aos-duration="2000"
+          >
             <div class="services-5 rounded-1 text-center shadow px-4 py-5">
               <img
                 src="/assets/images/Software-solutions-services.png"
@@ -230,8 +281,11 @@
               <h4 class="fw-bold pt-4 text-muted">Software Solutions</h4>
             </div>
           </div>
-          <div class="col-12 col-md-4" data-aos="fade-up"
-          data-aos-duration="3000">
+          <div
+            class="col-12 col-md-4"
+            data-aos="fade-up"
+            data-aos-duration="3000"
+          >
             <div class="services-6 rounded-1 text-center shadow px-4 py-5">
               <img
                 src="/assets/images/Payment-Solution.png"
@@ -251,14 +305,26 @@
 
     <section>
       <div class="container my-5 px-5">
-        <h2 class="text-center text-uppercase fw-bold lh-base" data-aos="zoom-in">
-          Visa's Solutions for Local and <br> International Enterprises
+        <h2
+          class="text-center text-uppercase fw-bold lh-base"
+          data-aos="zoom-in"
+        >
+          Visa's Solutions for Local and <br />
+          International Enterprises
         </h2>
 
         <div class="row my-5 gy-5">
-          <div class="col-12 col-md-4" data-aos="zoom-in" data-aos-duration="1000">
+          <div
+            class="col-12 col-md-4"
+            data-aos="zoom-in"
+            data-aos-duration="1000"
+          >
             <div class="blog">
-              <img src="/assets/images/BlogPost-1.webp" class="img-fluid" alt="" />
+              <img
+                src="/assets/images/BlogPost-1.webp"
+                class="img-fluid"
+                alt=""
+              />
               <h5 class="text-center fw-bold py-3 lh-base text-muted">
                 On-grid Distributed Solar <br />
                 Business
@@ -274,9 +340,17 @@
               </div>
             </div>
           </div>
-          <div class="col-12 col-md-4" data-aos="zoom-in" data-aos-duration="1000">
+          <div
+            class="col-12 col-md-4"
+            data-aos="zoom-in"
+            data-aos-duration="1000"
+          >
             <div class="blog">
-              <img src="/assets/images/BlogPost-2.webp" class="img-fluid" alt="" />
+              <img
+                src="/assets/images/BlogPost-2.webp"
+                class="img-fluid"
+                alt=""
+              />
               <h5 class="text-center fw-bold py-3 text-muted lh-base">
                 Off-grid Hybrid <br />
                 Power Business
@@ -292,9 +366,17 @@
               </div>
             </div>
           </div>
-          <div class="col-12 col-md-4" data-aos="zoom-in" data-aos-duration="1000">
+          <div
+            class="col-12 col-md-4"
+            data-aos="zoom-in"
+            data-aos-duration="1000"
+          >
             <div class="blog">
-              <img src="/assets/images/BlogPost-3.webp" class="img-fluid" alt="" />
+              <img
+                src="/assets/images/BlogPost-3.webp"
+                class="img-fluid"
+                alt=""
+              />
               <h5 class="text-center fw-bold py-3 lh-base text-muted">
                 Operation and Maintenance of <br />
                 Your Visa
@@ -317,12 +399,14 @@
     <!-- Blog Section Ended -->
 
     <!-- Contact Section Started -->
-<div id="contact"></div>
+    <div id="contact"></div>
     <section class="contact">
       <div class="container px-3">
         <div class="row">
           <p class="text-center pt-5" data-aos="zoom-in">Contact</p>
-          <h1 class="text-center fw-bold py-3" data-aos="fade-up">Get In Touch!</h1>
+          <h1 class="text-center fw-bold py-3" data-aos="fade-up">
+            Get In Touch!
+          </h1>
           <div class="col-12 col-md-4" data-aos="fade-up">
             <div class="d-flex gap-3">
               <div>
@@ -335,8 +419,8 @@
               <div class="px-3">
                 <h6 class="fw-bold">ADDRESS</h6>
                 <p class="text-muted">
-                  Office No. 304, Al Muteena Technic Building Dubai.
-                  P.O Box 57722.
+                  Office No. 304, Al Muteena Technic Building Dubai. P.O Box
+                  57722.
                 </p>
               </div>
             </div>
@@ -355,7 +439,7 @@
                     href="tel:042279716"
                     class="text-decoration-none text-muted"
                   >
-                  042279716
+                    042279716
                   </a>
                 </p>
               </div>
@@ -375,7 +459,7 @@
                     href="tel:+971 4 283  4220"
                     class="text-decoration-none text-muted"
                   >
-                  +971 4 283  4220
+                    +971 4 283 4220
                   </a>
                 </p>
               </div>
@@ -479,15 +563,34 @@
       crossorigin="anonymous"
     ></script>
 
-     <!-- AOS Animation -->
+    <!-- AOS Animation -->
 
-     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
-     <script>
+    <script>
       AOS.init({
         offset: 110,
         duration: 1000,
+      });
+    </script>
 
+    <script>
+      const goTopBtn = document.getElementById("go-top-btn");
+
+      window.addEventListener("scroll", () => {
+        if (window.scrollY > 0) {
+          goTopBtn.style.display = "block";
+          goTopBtn.style.opacity = "1";
+        } else {
+          goTopBtn.style.opacity = "0";
+          setTimeout(() => {
+            goTopBtn.style.display = "none";
+          }, 400); // Delay hiding to allow time for the opacity transition
+        }
+      });
+
+      goTopBtn.addEventListener("click", () => {
+        window.scrollTo({ top: 0, behavior: "smooth" });
       });
     </script>
 
