--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         <div class="row">
           <div
             class="col-12 col-md-6 my-5 order-1 order-md-0"
-            data-aos="flip-left"
+            data-aos="flip-left" data-aos-duration="3000"
           >
             <img
               src="/assets/images/visa.jpeg"
@@ -189,7 +189,7 @@
               </button>
             </div>
           </div>
-          <div class="col-12 col-md-6 my-5" data-aos="flip-right">
+          <div class="col-12 col-md-6 my-5" data-aos="flip-right" data-aos-duration="3000">
             <img
               src="/assets/images/visa-2.webp"
               class="img-fluid border-img"
