--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <section class="bg-white">
       <div class="container">
         <nav
-          class="navbar navbar-expand-lg navbar-light bg-white fixed-top px-5 shadow-sm"
+          class="navbar navbar-expand-lg navbar-light bg-white fixed-top px-md-5 px-0 shadow-sm"
         >
           <div class="container-fluid">
             <a class="navbar-brand" href="#">
