--- a/index.html
+++ b/index.html
@@ -547,10 +547,16 @@
                 </button>
               </div>
             </form>
+            
           </div>
         </div>
       </div>
+      <hr>
     </section>
+
+    <p class="text-center bg-dark text-white m-0 p-3">© 2023 JUBL ALQALM™ All Rights Reserved.</p>
+
+    
 
     <!-- Contact Section Ended -->
 
