--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     <!-- Hero Section Ended -->
 
     <button id="go-top-btn">
-      <i class="fa fa-level-up text-dark" aria-hidden="true"></i>
+      <i class="fa fa-level-up text-muted" aria-hidden="true"></i>
     </button>
 
     <!-- About Section Started -->
