--- a/index.html
+++ b/index.html
@@ -554,7 +554,7 @@
       <hr>
     </section>
 
-    <p class="text-center bg-dark text-white m-0 p-3">© 2023 JUBL ALQALM™ All Rights Reserved.</p>
+    <p class="text-center bg-dark text-white m-0 p-3">© 2023 <b>JUBL ALQALM</b> All Rights Reserved.</p>
 
     
 
